[tool.poetry]
name = "chewie_prototype"
version = "0.1.0"
description = ""
authors = ["Finn Gruwier Larsen <figl@ssi.dk>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^4.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
